--- a/src/main/webapp/WEB-INF/view/transaction/transaction/transaction.html
+++ b/src/main/webapp/WEB-INF/view/transaction/transaction/transaction.html
@@ -27,20 +27,11 @@
                             @if(shiro.hasPermission("/transaction/delete")){
                             <#button name="删除" icon="fa-remove" clickFun="Transaction.delete()" space="true"/>
                             @}
-                            @if(shiro.hasPermission("/transaction/delete")){
-                            <#button name="图片维护" icon="fa-edit" clickFun="Transaction.delete()" space="true"/>
+                            @if(shiro.hasPermission("/transaction/detail")){
+                            <#button name="详情" icon="fa-edit" clickFun="Transaction.openDetail()" space="true"/>
                             @}
-                            @if(shiro.hasPermission("/transaction/delete")){
-                            <#button name="年检证件维护" icon="fa-edit" clickFun="Transaction.delete()" space="true"/>
-                            @}
-                            @if(shiro.hasPermission("/transaction/delete")){
-                            <#button name="行驶证维护" icon="fa-edit" clickFun="Transaction.delete()" space="true"/>
-                            @}
-                            @if(shiro.hasPermission("/transaction/delete")){
-                            <#button name="保险维护" icon="fa-edit" clickFun="Transaction.delete()" space="true"/>
-                            @}
-                            @if(shiro.hasPermission("/transaction/delete")){
-                            <#button name="保养记录" icon="fa-edit" clickFun="Transaction.delete()" space="true"/>
+                            @if(shiro.hasPermission("/transaction/detail")){
+                            <#button name="咨询" icon="fa-search" clickFun="Transaction.openChat()" space="true"/>
                             @}
                         </div>
                         <#table id="TransactionTable"/>
@@ -50,5 +41,7 @@
         </div>
     </div>
 </div>
+<link rel="stylesheet" href="${ctxPath}/static/dist/css/layui.css" media="all">
+<script src="${ctxPath}/static/dist/layui.js"></script>
 <script src="${ctxPath}/static/modular/transaction/transaction/transaction.js"></script>
 @}
