--- a/src/main/webapp/WEB-INF/view/system/user/user_view.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_view.html
@@ -37,7 +37,7 @@
                                             <#input id="birthday" name="出生日期" underline="true" type="text"
                                                     value="${user.birthday}"/>
 
-                                            <#input id="citySel" name="部门" underline="true" readonly="readonly" value="${deptName}"
+                                            <#input id="citySel" name="部门"  underline="true" underline="true" readonly="readonly" value="${deptName}"
                                                     hidden="deptid" hiddenValue="${user.deptid}"
                                                     clickFun="UserInfoDlg.showInfoDeptSelectTree(); return false;"
                                                     style="background-color: #ffffff !important;"
