--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -10,11 +10,13 @@
     <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
     <link href="${ctxPath}/static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
     <link href="${ctxPath}/static/css/style.css?v=4.1.0" rel="stylesheet">
+    <link rel="stylesheet" href="${ctxPath}/static/dist/css/layui.css" media="all">
     <script>if (window.top !== window.self) {
         window.top.location = window.location;
     }</script>
     <script src="${ctxPath}/static/js/jquery.min.js?v=2.1.4"></script>
     <script src="${ctxPath}/static/js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="${ctxPath}/static/dist/layui.js"></script>
 </head>
 
 <body class="gray-bg">
@@ -53,6 +55,7 @@
             <button type="submit" class="btn btn-primary block full-width m-b">登 录</button>
             </p>
         </form>
+        <button id="register" type="button" class="btn btn-primary block full-width m-b">注 册</button>
     </div>
 </div>
 
@@ -61,6 +64,18 @@
         $("#kaptcha").on('click', function () {
             $("#kaptcha").attr('src', '${ctxPath}/kaptcha?' + Math.floor(Math.random() * 100)).fadeIn();
         });
+        $("#register").click(function () {
+            layui.use('layer', function () {
+                layer.open({
+                    type: 2,
+                    area: ['800px', '500px'], //宽高
+                    fix: true, //不固定
+                    // maxmin: true,
+                    content: '/transaction/user_add'
+                })
+            });
+            // this.layerIndex = index;
+        })
     });
 </script>
 
